Able to access env file

--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,2 @@
-KME_ID="KME_1"
-STORAGE_URL="./storage/KME_1.json"
-SUPPORTED_EXTENSION={"route_type": ["direct", "indirect"], "transfer_method": ["qkd_sat", "qkd_fibre", "classical"]}
+KME_ID=KME_1
+STORAGE_PATH=./storage/KME_1.json
