--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ actix-web = "4.3.1"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 dotenv = "0.15.0"
+actix-cors = "0.6.4"
