--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 dotenv = "0.15.0"
 actix-cors = "0.6.4"
+base64 = "0.21.2"
