--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = { version = "4", features = ["openssl"] }
-openssl = { version = "0.10", features = ["v110"] }
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 dotenv = "0.15.0"
@@ -16,3 +15,5 @@ base64 = "0.21.2"
 to-binary = "0.4.0"
 num = "0.4"
 local-ip-address = "0.5.3"
+uuid = { version = "1.4", features = ["v4", "serde"] }
+openssl = { version = "0.10", features = ["v110"] }
