--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ serde_json = "1.0.96"
 dotenv = "0.15.0"
 actix-cors = "0.6.4"
 base64 = "0.21.2"
-to-binary = "0.4.0"
 num = "0.4"
 local-ip-address = "0.5.3"
 uuid = { version = "1.4", features = ["v4", "serde"] }
 openssl = { version = "0.10", features = ["v110"] }
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+
